--- a/posts/pyenvsetting/index.qmd
+++ b/posts/pyenvsetting/index.qmd
@@ -4,7 +4,7 @@ subtitle: "Test Case of Handling a Binary Data with Python"
 author: "Yonghun Suh"
 date: "Oct 9, 2024"
 categories: [Code]
-image: https://db0dce98.rocketcdn.me/en/files/2020/04/Diapositive1-1.png
+image: https://nrennie.rbind.io/blog/combining-r-and-python-with-reticulate-and-quarto/featured.png
 format: 
   html:
     toc: true
